[gd_scene load_steps=2 format=3 uid="uid://c4j2e5qp4vr6k"]

[ext_resource type="Script" path="res://scenes/menus/options/graphics_options_display_controller.gd" id="1_x3k4n"]

[node name="GraphicsOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_x3k4n")

[node name="BackgroundPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MainContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = -50.0
offset_bottom = -50.0

[node name="HeaderContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MainContainer/HeaderContainer"]
layout_mode = 2
text = "Graphics Settings"
label_settings = SubResource("LabelSettings_1")

[node name="BackButton" type="Button" parent="MainContainer/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "Back"

[node name="HSeparator" type="HSeparator" parent="MainContainer"]
layout_mode = 2

[node name="SettingsContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="MainContainer/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DisplaySettingsGroup" type="GroupBox" parent="MainContainer/SettingsContainer/LeftPanel"]
layout_mode = 2
text = "Display Settings"

[node name="DisplayGrid" type="GridContainer" parent="MainContainer/SettingsContainer/LeftPanel/DisplaySettingsGroup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = -10.0
columns = 2

[node name="ResolutionLabel" type="Label" parent="MainContainer/SettingsContainer/LeftPanel/DisplaySettingsGroup/DisplayGrid"]
layout_mode = 2
text = "Resolution:"

[node name="ResolutionOption" type="OptionButton" parent="MainContainer/SettingsContainer/LeftPanel/DisplaySettingsGroup/DisplayGrid"]
layout_mode = 2

[node name="FullscreenLabel" type="Label" parent="MainContainer/SettingsContainer/LeftPanel/DisplaySettingsGroup/DisplayGrid"]
layout_mode = 2
text = "Fullscreen Mode:"

[node name="FullscreenOption" type="OptionButton" parent="MainContainer/SettingsContainer/LeftPanel/DisplaySettingsGroup/DisplayGrid"]
layout_mode = 2

[node name="VsyncLabel" type="Label" parent="MainContainer/SettingsContainer/LeftPanel/DisplaySettingsGroup/DisplayGrid"]
layout_mode = 2
text = "VSync:"

[node name="VsyncCheckBox" type="CheckBox" parent="MainContainer/SettingsContainer/LeftPanel/DisplaySettingsGroup/DisplayGrid"]
layout_mode = 2

[node name="MaxFpsLabel" type="Label" parent="MainContainer/SettingsContainer/LeftPanel/DisplaySettingsGroup/DisplayGrid"]
layout_mode = 2
text = "Frame Rate Limit:"

[node name="MaxFpsSpinBox" type="SpinBox" parent="MainContainer/SettingsContainer/LeftPanel/DisplaySettingsGroup/DisplayGrid"]
layout_mode = 2
min_value = 30.0
max_value = 240.0
value = 60.0

[node name="QualitySettingsGroup" type="GroupBox" parent="MainContainer/SettingsContainer/LeftPanel"]
layout_mode = 2
text = "Quality Settings"

[node name="QualityGrid" type="GridContainer" parent="MainContainer/SettingsContainer/LeftPanel/QualitySettingsGroup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = -10.0
columns = 2

[node name="TextureQualityLabel" type="Label" parent="MainContainer/SettingsContainer/LeftPanel/QualitySettingsGroup/QualityGrid"]
layout_mode = 2
text = "Texture Quality:"

[node name="TextureQualityOption" type="OptionButton" parent="MainContainer/SettingsContainer/LeftPanel/QualitySettingsGroup/QualityGrid"]
layout_mode = 2

[node name="ShadowQualityLabel" type="Label" parent="MainContainer/SettingsContainer/LeftPanel/QualitySettingsGroup/QualityGrid"]
layout_mode = 2
text = "Shadow Quality:"

[node name="ShadowQualityOption" type="OptionButton" parent="MainContainer/SettingsContainer/LeftPanel/QualitySettingsGroup/QualityGrid"]
layout_mode = 2

[node name="EffectsQualityLabel" type="Label" parent="MainContainer/SettingsContainer/LeftPanel/QualitySettingsGroup/QualityGrid"]
layout_mode = 2
text = "Effects Quality:"

[node name="EffectsQualityOption" type="OptionButton" parent="MainContainer/SettingsContainer/LeftPanel/QualitySettingsGroup/QualityGrid"]
layout_mode = 2

[node name="ModelQualityLabel" type="Label" parent="MainContainer/SettingsContainer/LeftPanel/QualitySettingsGroup/QualityGrid"]
layout_mode = 2
text = "Model Quality:"

[node name="ModelQualityOption" type="OptionButton" parent="MainContainer/SettingsContainer/LeftPanel/QualitySettingsGroup/QualityGrid"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="MainContainer/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AntiAliasingGroup" type="GroupBox" parent="MainContainer/SettingsContainer/RightPanel"]
layout_mode = 2
text = "Anti-Aliasing"

[node name="AntiAliasingGrid" type="GridContainer" parent="MainContainer/SettingsContainer/RightPanel/AntiAliasingGroup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = -10.0
columns = 2

[node name="AAEnabledLabel" type="Label" parent="MainContainer/SettingsContainer/RightPanel/AntiAliasingGroup/AntiAliasingGrid"]
layout_mode = 2
text = "Enable Anti-Aliasing:"

[node name="AAEnabledCheckBox" type="CheckBox" parent="MainContainer/SettingsContainer/RightPanel/AntiAliasingGroup/AntiAliasingGrid"]
layout_mode = 2

[node name="AALevelLabel" type="Label" parent="MainContainer/SettingsContainer/RightPanel/AntiAliasingGroup/AntiAliasingGrid"]
layout_mode = 2
text = "Anti-Aliasing Level:"

[node name="AALevelOption" type="OptionButton" parent="MainContainer/SettingsContainer/RightPanel/AntiAliasingGroup/AntiAliasingGrid"]
layout_mode = 2

[node name="MSAALabel" type="Label" parent="MainContainer/SettingsContainer/RightPanel/AntiAliasingGroup/AntiAliasingGrid"]
layout_mode = 2
text = "MSAA Quality:"

[node name="MSAAOption" type="OptionButton" parent="MainContainer/SettingsContainer/RightPanel/AntiAliasingGroup/AntiAliasingGrid"]
layout_mode = 2

[node name="FXAALabel" type="Label" parent="MainContainer/SettingsContainer/RightPanel/AntiAliasingGroup/AntiAliasingGrid"]
layout_mode = 2
text = "Enable FXAA:"

[node name="FXAACheckBox" type="CheckBox" parent="MainContainer/SettingsContainer/RightPanel/AntiAliasingGroup/AntiAliasingGrid"]
layout_mode = 2

[node name="PostProcessingGroup" type="GroupBox" parent="MainContainer/SettingsContainer/RightPanel"]
layout_mode = 2
text = "Post-Processing Effects"

[node name="PostProcessingGrid" type="GridContainer" parent="MainContainer/SettingsContainer/RightPanel/PostProcessingGroup"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 30.0
offset_right = -10.0
offset_bottom = -10.0
columns = 2

[node name="MotionBlurLabel" type="Label" parent="MainContainer/SettingsContainer/RightPanel/PostProcessingGroup/PostProcessingGrid"]
layout_mode = 2
text = "Motion Blur:"

[node name="MotionBlurCheckBox" type="CheckBox" parent="MainContainer/SettingsContainer/RightPanel/PostProcessingGroup/PostProcessingGrid"]
layout_mode = 2

[node name="BloomLabel" type="Label" parent="MainContainer/SettingsContainer/RightPanel/PostProcessingGroup/PostProcessingGrid"]
layout_mode = 2
text = "Bloom:"

[node name="BloomCheckBox" type="CheckBox" parent="MainContainer/SettingsContainer/RightPanel/PostProcessingGroup/PostProcessingGrid"]
layout_mode = 2

[node name="DOFLabel" type="Label" parent="MainContainer/SettingsContainer/RightPanel/PostProcessingGroup/PostProcessingGrid"]
layout_mode = 2
text = "Depth of Field:"

[node name="DOFCheckBox" type="CheckBox" parent="MainContainer/SettingsContainer/RightPanel/PostProcessingGroup/PostProcessingGrid"]
layout_mode = 2

[node name="SSAOLabel" type="Label" parent="MainContainer/SettingsContainer/RightPanel/PostProcessingGroup/PostProcessingGrid"]
layout_mode = 2
text = "Screen Space AO:"

[node name="SSAOCheckBox" type="CheckBox" parent="MainContainer/SettingsContainer/RightPanel/PostProcessingGroup/PostProcessingGrid"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="MainContainer"]
layout_mode = 2

[node name="PresetLabel" type="Label" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "Quality Preset:"

[node name="PresetOption" type="OptionButton" parent="MainContainer/ButtonContainer"]
layout_mode = 2

[node name="Spacer" type="Control" parent="MainContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "Reset to Defaults"

[node name="ApplyButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "Apply"

[node name="OKButton" type="Button" parent="MainContainer/ButtonContainer"]
layout_mode = 2
text = "OK"

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24